--- a/public/admin/css/sb-admin-2.css
+++ b/public/admin/css/sb-admin-2.css
@@ -11312,8 +11312,8 @@ body.sidebar-toggled footer.sticky-footer {
   object-fit: cover;
 }
 .top-main-logo h2 {
-  padding: 0 16px;
-  font-size: 70px;
+  padding: 5px 16px;
+  font-size: 65px;
   font-weight: 800;
   color: #000;
 }
