--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -393,3 +393,17 @@ ul.pricing-details li {
   background-color: rgb(150 114 251 / 26%);
   border: 1px solid #9672FB;
 }
+.counter.counter-lg {
+  position: relative;
+  top: -12px;
+  left: auto;
+  z-index: 2;
+  padding: 1px 7px;
+  margin-left: -20px;
+  font-size: 10px;
+  color: #fff;
+  background-color: #fe1212;
+  border-radius: 10em;
+  -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
