--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -1,3 +1,6 @@
+html, body {
+  height: 100%;
+}
 .opacity-50 {
   opacity: 0.50;
 }
@@ -406,4 +409,147 @@ ul.pricing-details li {
   border-radius: 10em;
   -webkit-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+#plan-toggle {
+  border-radius: 50em;
+  border:  1px solid #D4D2D7;
+}
+#plan-toggle label {
+  border-radius: 50em;
+}
+#plan-toggle .active {
+  background-color: #9672FB;
+  color: #fff;
+}
+
+.hide-amount, .hide-per-duration, .hide-label {
+  display: none;
+}
+
+.rating { 
+  border: none;
+  margin:0px;
+  float: left;
+}
+
+.rating > input { display: none; } 
+
+.rating.star > label {
+    color: #D6D3DC;
+    margin: 1px 5px 0px 0px;
+    background-color: #ffffff;
+    border-radius: 0;
+    height: 48px;
+    float: right;
+    width: 44px;
+    border: 1px solid #ffffff;
+}
+fieldset.rating.star > label:before { 
+    margin-top: 0;
+    padding: 0px;
+    font-size: 47px;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "\2605";
+    position: relative;
+    top: -9px;
+}
+.rating > label:before {
+    margin-top: 2px;
+    padding: 5px 12px;
+    font-size: 1.25em;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "";
+}
+.rating > .half:before { 
+  content: "\f089";
+  position: absolute;
+}
+.rating.star > label{
+  background-color: transparent !important;
+}
+.rating > label { 
+    color: #fff;
+    margin: 1px 11px 0px 0px;
+    background-color: #D6D3DC;
+    border-radius: 2px;
+    height: 16px;
+    float: right;
+    width: 16px;
+    border: 1px solid #c1c0c0;  
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { 
+  background-color:#9672FB!important;
+  cursor:pointer;
+} /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { 
+  background-color:#9672FB!important;
+  cursor:pointer;
+} 
+.rating.star:not(:checked) > label:hover, /* hover current star */
+.rating.star:not(:checked) > label:hover ~ label { 
+  color:#9672FB!important;
+  background-color: transparent !important;
+  cursor:pointer;
+} /* hover previous stars in list */
+
+.rating.star > input:checked + label:hover, /* hover current star when changing rating.star */
+.rating.star > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating.star > input:checked ~ label:hover ~ label { 
+  color:#9672FB!important;
+  cursor:pointer;
+  background-color: transparent !important;
+} 
+.star_rating{
+        width: 500px;
+    margin: 0 auto;
+    border: 1px solid #ff0000;
+    padding: 3px 30px 72px 35px;
+    box-shadow: 0 0 15px #9672FB;
+    margin-top: 2%;
+    border-radius: 14px;
+}
+.star_rating h2 {
+  font-size: 27px;
+  text-transform: uppercase;
+}
+.star_rating p {
+  font-size: 17px;
+  color: #D6D3DC;
+  clear: both;
+  margin-bottom: 3px;
+}
+.star_rating h4 {
+    font-size: 17px;
+    color: #D6D3DC;
+    clear: both;
+    margin-bottom: 3px;
+    border-top: 2px solid #9672FB;
+    padding-top: 16px;
+    text-align: center;
+}
+@media screen and (max-width: 500px){
+  .star_rating {
+    width: 100%;
+    padding: 3px 8px 72px 6px;
+  }
+  .rating.star {
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    float: none;
+  }
+  .rating.star > label {
+    margin: 1px;
+    width: 19%;
+  }
 }
