--- a/public/css/frontstyles.css
+++ b/public/css/frontstyles.css
@@ -11827,3 +11827,26 @@ ul.pricing-details li {
   display: block;
   width: 100%;
 }
+
+html, body {
+  height: 100%;
+}
+.full-height {
+  height: 100%;
+}
+
+#plan-toggle {
+  border-radius: 50em;
+  border:  1px solid #D4D2D7;
+}
+#plan-toggle label {
+  border-radius: 50em;
+}
+#plan-toggle .active {
+  background-color: #9672FB;
+  color: #fff;
+}
+
+.hide-amount, .hide-per-duration {
+  display: none;
+}
