--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -15,6 +15,10 @@ h1.page-heading {
   font-size: 24px;
   font-weight: 600;
 }
+h2.page-heading {
+  font-size: 18px;
+  font-weight: 600;
+}
 h1.page-heading span.badge {
     font-size: 12px;
     font-weight: 400;
@@ -552,4 +556,16 @@ fieldset.rating.star > label:before {
     margin: 1px;
     width: 19%;
   }
+}
+.pricing-table .card-text {
+  min-height: 120px;
+}
+
+#profile-image {
+    width: 130px;
+    height: 130px;
+}
+#comment-media-preview .picture-img {
+    width: 120px;
+    height: 120px;
 }
