--- a/public/css/frontstyles.css
+++ b/public/css/frontstyles.css
@@ -4551,6 +4551,10 @@ textarea.form-control-lg {
   margin-bottom: 0.5rem;
 }
 
+.card-text {
+    min-height: 120px;
+}
+
 .card-subtitle {
   margin-top: -0.25rem;
   margin-bottom: 0;
