--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -28,6 +28,9 @@ h1.page-heading span.badge {
   min-height: 780px;
 }
 
+.full-height {
+    height: 100%;
+}
 /* Min Height */
 .min-height-100 {
   min-height: 100px;
