--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -699,8 +699,9 @@ h3.customer-name {
   transition: 0.5s;
   padding-top: 10px;
   -webkit-box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
--moz-box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
-box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
+  -moz-box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
+  box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
+  overflow: hidden;
 }
 .side-container .filter-content {
     height: 100%;
@@ -733,4 +734,27 @@ box-shadow: -5px 7px 17px -8px rgba(0,0,0,0.75);
 @media screen and (max-height: 450px) {
   .side-container {padding-top: 15px;}
   .side-container a {font-size: 18px;}
+}
+
+#filter-actions .content-slide .sidebar {
+  width: 100% !important;
+}
+#filter-actions .content-slide .sidebar .nav-item {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+#filter-actions .content-slide .sidebar .nav-item:last-child {
+  border: none;
+}
+#filter-actions .content-slide .sidebar .nav-item .nav-link {
+  width: 100%;
+  line-height: 1rem;
+}
+#filter-actions .content-slide .sidebar .nav-item .nav-link span {
+  font-size: 15px;
+}
+#filter-actions .content-slide .sidebar .nav-item .nav-link[data-toggle="collapse"]::after {
+  font-size: 17px;
+}
+#filter-actions .content-slide .sidebar .nav-item.action-apply {
+    margin: 20px;
 }
