--- a/public/admin/css/sb-admin-2.css
+++ b/public/admin/css/sb-admin-2.css
@@ -37,7 +37,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: 'Inter', sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -60,7 +60,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Inter', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -578,7 +578,7 @@ pre code {
 
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
+    max-width: 1024px;
   }
 }
 
@@ -2319,10 +2319,10 @@ textarea.form-control {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  padding: 10px 16px;
+  font-size: 14px;
   line-height: 1.5;
-  border-radius: 0.35rem;
+  border-radius: 8px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -2363,27 +2363,27 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2e59d9;
-  border-color: #2653d4;
+  background-color: #7B5AD6;
+  border-color: #7B5AD6;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #2e59d9;
-  border-color: #2653d4;
+  background-color: #7B5AD6;
+  border-color: #7B5AD6;
   box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #9672FB;
-  border-color: #9672FB;
+  background-color: #7B5AD6;
+  border-color: #7B5AD6;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #7B5AD6;
   border-color: #244ec9;
 }
 
@@ -4492,7 +4492,7 @@ input[type="button"].btn-block {
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid #e3e6f0;
-  border-radius: 0.35rem;
+  border-radius: 8px;
 }
 
 .card > hr {
@@ -4884,7 +4884,7 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #7B5AD6;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
@@ -6417,7 +6417,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #2653d4 !important;
+  background-color: #7B5AD6 !important;
 }
 
 .bg-secondary {
@@ -7571,6 +7571,10 @@ button.bg-dark:focus {
 
 .shadow {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
+}
+
+.shadow-custom {
+  box-shadow: 0px 0px 30px #28213A33; !important;
 }
 
 .shadow-lg {
@@ -9797,7 +9801,7 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #F5F5F6;
   width: 100%;
   overflow-x: hidden;
   position: relative;
@@ -10177,6 +10181,7 @@ a:focus {
 .topbar #sidebarToggleTop {
   height: 2.5rem;
   width: 2.5rem;
+  padding: 0;
 }
 
 .topbar #sidebarToggleTop:hover {
@@ -10338,6 +10343,7 @@ a:focus {
 .sidebar .nav-item .nav-link {
   padding: 0.75rem 1rem;
   width: 12rem;
+  border-left: 2px solid transparent;
 }
 
 .sidebar .nav-item .nav-link span {
@@ -10347,6 +10353,12 @@ a:focus {
 .sidebar .nav-item.active .nav-link {
   font-weight: 700;
   color: #9672FB !important;
+  border-left: 2px solid;
+}
+
+.sidebar .nav-item .nav-link:hover {
+  background-color: #F5F5F6;
+  border-left: 2px solid #9672FB;
 }
 
 .sidebar .nav-item .collapse {
@@ -10512,7 +10524,7 @@ a:focus {
 
 @media (min-width: 768px) {
   .sidebar {
-    width: 14rem !important;
+    width: 300px !important;
   }
   .sidebar .nav-item .collapse {
     position: relative;
@@ -10539,15 +10551,16 @@ a:focus {
     width: 100%;
     text-align: left;
     padding: 1rem;
-    width: 14rem;
+    width: 100%;
   }
   .sidebar .nav-item .nav-link i {
-    font-size: 0.85rem;
+    font-size: 15px;
     margin-right: 0.25rem;
   }
   .sidebar .nav-item .nav-link span {
-    font-size: 0.85rem;
+    font-size: 15px;
     display: inline;
+    margin-left: 5px;
   }
   .sidebar .nav-item .nav-link[data-toggle="collapse"]::after {
     width: 1rem;
@@ -11354,6 +11367,7 @@ img.action-icons {
 h5.card-label {
   font-size: 14px;
   font-weight: 600;
+  margin-bottom: 30px;
 }
 .logo img.logo-img, .picture img.picture-img, .inspiration img.inspiration-img {
   max-width: 200px;
